--- a/index.ipynb
+++ b/index.ipynb
@@ -406,7 +406,7 @@
     }
    ],
    "source": [
-    "city_count = len.cities\n",
+    "city_count = len(cities\n",
     "city_count # 12"
    ]
   },
