--- a/index.ipynb
+++ b/index.ipynb
@@ -418,22 +418,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Pyeongchang'"
+       "'PyeongChang'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cities[11]['City'] = 'Pyeongchang'\n",
+    "cities[11]['City'] = 'PyeongChang'\n",
     "cities[11]['City'] # 'PyeongChang'"
    ]
   },
