--- a/index.ipynb
+++ b/index.ipynb
@@ -446,16 +446,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "['PyeongChang', 'South Korea', 2581000, 3194]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,8 +463,7 @@
    "source": [
     "pyeongchang_values = list(cities[11].values())\n",
     "\n",
-    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
-    "type(pyeongchang_values) # list"
+    "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n"
    ]
   },
   {
