--- a/index.ipynb
+++ b/index.ipynb
@@ -331,22 +331,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}"
+       "['City', 'Country', 'Population', 'Area']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salina = cities[9]\n",
+    "salina = list(cities[9])\n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
