Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -348,7 +348,7 @@
    ],
    "source": [
     "salina = list(cities[9])\n",
-    "salina.values()\n",
+    "listsalina.values()\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
   },
